Initial commit: Complete Shetty Realtors React project with CMS integration

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sudhir-realtors-react</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Shetty Realtors - Premium Real Estate</title>
+    <link rel="icon" type="image/png" href="/lovable-uploads/52d0ead8-fce0-4e43-9b59-8105eea822a8.png" />
+    <meta name="description" content="Shetty Realtors - Premium commercial real estate solutions. Connecting businesses with the right space for over 30 years." />
+    <meta name="author" content="Shetty Realtors" />
 
-    <meta property="og:title" content="sudhir-realtors-react" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Shetty Realtors - Premium Real Estate" />
+    <meta property="og:description" content="Premium commercial real estate solutions. Connecting businesses with the right space for over 30 years." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
