--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shetty Realtors - Premium Real Estate</title>
-    <link rel="icon" type="image/png" href="/lovable-uploads/52d0ead8-fce0-4e43-9b59-8105eea822a8.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="description" content="Shetty Realtors - Premium commercial real estate solutions. Connecting businesses with the right space for over 30 years." />
     <meta name="author" content="Shetty Realtors" />
 
